add button and title to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<% if user_signed_in? %>
-  <%= current_user.email %>
-<% end %>
+<div class="container">
+  <h1>Amazing app</h1>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto consequuntur vel illo atque id ipsa! Voluptatum sint accusantium, quidem, iste magnam doloribus illum inventore dolore quisquam, dolorum expedita consectetur quod.</p>
+  <%= link_to 'create', '#', class: 'btn btn-success'  %>
+</div>
